# polyprime

./: .coveragerc  Makefile  README.md  pyproject.toml
.github/workflows/: codecov.yml
polyprime/: list_utils.py  miller_rabin.py  prime_field_polynomial.py
tests/: test_addition.py  test_degree.py  test_evaluation.py  test_exponentiation.py  test_instantiation.py  test_miller_rabin.py  test_monomiality.py  test_multiplication.py  test_representation.py  test_subtraction.py
