[tool.poetry]
name = "polyprime"
version = "0.1.0"
description = "A playground lib for polynomials with integer coefficients modulo a prime number"
authors = ["zinedine_zeitnot <zinedine_zeitnot@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
